fixed page cut off

--- a/UJBUZZ/stylem.css
+++ b/UJBUZZ/stylem.css
@@ -42,4 +42,5 @@ body {
 	height: auto;
 	object-fit: fill; 
 	margin: 0; 
+	width:100%
 }
